full project update

--- a/src/main/resources/templates/homefragment.html
+++ b/src/main/resources/templates/homefragment.html
@@ -20,7 +20,7 @@
 <!-- Navigation-->
 <nav class="navbar navbar-light bg-light static-top" th:fragment="header">
     <div class="container">
-        <a class="navbar-brand" href="#!">Issue Tracking System</a>
+        <a class="navbar-brand" href="/home">Issue Tracking System</a>
         <a class="btn btn-primary" href="/login">Log In</a>
     </div>
 </nav>
