--- a/src/main/resources/templates/issuedetail.html
+++ b/src/main/resources/templates/issuedetail.html
@@ -165,7 +165,7 @@
                     </div>
                 </form>
 
-                <form action="#" method="post" modelAttribute="comment" th:action="@{/issues/add-/{id}(id = ${issue.id})}">
+                <form action="#" method="post" modelAttribute="comment" th:action="@{/issues/add-comment/{id}(id = ${issue.id})}">
                     <div class="row">
                         <div class="col-md-12 grid-margin stretch-card">
                             <div class="card">
