--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -17,11 +17,9 @@
 <!-- Navigation-->
 
 
-<nav class="navbar navbar-light bg-light static-top">
-    <div class="container">
-        <a class="navbar-brand" href="#!">Issue Tracking System</a>
-    </div>
-</nav>
+
+<nav th:replace="homefragment :: header"/>
+
 <!-- Masthead-->
 <header class="masthead">
     <div class="container position-relative">
@@ -32,11 +30,11 @@
                     <div class="avatar"></div>
                     <div class="form-box">
                         <div>
-                            <span style="color: green">You have been logged Out from system!</span>
+                            <span style="color: green">You are logged out from system!</span>
                         </div>
 
                         <div>
-                            <h1 class="text-primary">SEE YOU SOON....</h1>
+                            <h3 class="text-primary">SEE YOU SOON....</h3>
                         </div>
                     </div>
                 </div>
